# Research_Copilot

./: .gitignore  README.md  browser_user.py  chain.py  db.py  embeddings.py  main.py  parser.py  pyproject.toml  runner.bat
