[project]
name = "research-helper-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "groq>=0.25.0",
    "huggingface-hub>=0.31.4",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.24",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
]
