[project]
name = "research-helper-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "browser-use>=0.1.40",
    "faiss-cpu>=1.11.0",
    "groq>=0.25.0",
    "huggingface-hub>=0.31.4",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langchain-groq>=0.3.2",
    "playwright>=1.52.0",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.24",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
]
